# pytorch

./: .gitattributes  .gitignore  ANN.ipynb  Autograd.ipynb  README.md  neural_network.ipynb  pyproject.toml
src/: Dataset_and_DatasetLoader.ipynb  cnn.ipynb  mps.ipynb  non-seq-nn.ipynb  tensors_in_pytorch.ipynb  torch_pipeline.ipynb  transfer-learning.ipynb
src/Model/: new.pth
src/ann,cnn,rnn,lstm/: 100_Unique_QA_Dataset.csv  lstm.ipynb  rnn.ipynb  transformers.ipynb  transformers.py
src/hpt tuning/: hpt-tuning.ipynb
